Getting together for CSS doc

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Fullstack Bakery</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header>
@@ -13,14 +14,14 @@
         <a href="#">About Us</a>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <aside>
         <ul>
-          <li>Bread</li>
-          <li>Cakes</li>
-          <li>Cookies</li>
-          <li>Muffins</li>
-          <li>Pies</li>
+          <li class="baked">Bread</li>
+          <li class="baked">Cakes</li>
+          <li class="baked">Cookies</li>
+          <li class="baked">Muffins</li>
+          <li class="baked">Pies</li>
         </ul>
       </aside>
       <article>
